objects/copado__ExtensionConfiguration__c.object
<CustomObject>
    <description>Defines the configuration for a specific extension.</description>
    <fields>
        <fullName>copadoQuality__Latest_Job_Execution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Latest Job Execution</label>
        <referenceTo>copado__JobExecution__c</referenceTo>
        <relationshipLabel>Extension Configurations</relationshipLabel>
        <relationshipName>Extension_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copadoQuality__Requires_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requires Sync?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__AcceptanceCriteria__c</fullName>
        <defaultValue>&quot;{}&quot;</defaultValue>
        <label>Acceptance Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Backend_Bypass__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Internal: When true on incoming DML, trigger handlers bypass business logic. Auto-clears to false in before context.</description>
        <label>Backend Bypass</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Details__c</fullName>
        <label>Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__ExtensionApplication__c</fullName>
        <inlineHelpText>Select the Copado Phase based on the Extension Tool you want to use. For example, if you select Test, the Extension Tool picklist will list the available Tools for that specific phase, e.g. Copado Robotic Test, Apex tests, or SCA tools such as PMD or Codescan.</inlineHelpText>
        <label>Copado Phase</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__ExtensionTool__c</fullName>
        <label>Extension Tool</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Manual Tests</fullName>
                </value>
                <value>
                    <fullName>Apex Tests</fullName>
                </value>
                <value>
                    <fullName>PMD</fullName>
                </value>
                <value>
                    <fullName>Pull Request</fullName>
                </value>
                <value>
                    <fullName>Checkmarx</fullName>
                </value>
                <value>
                    <fullName>sfdx-scanner</fullName>
                </value>
                <value>
                    <fullName>Flow Tests</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Status__c</fullName>
        <description>Deprecated</description>
        <label>Status - Deprecated</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                    <default>true</default>
                    <label>Inactive</label>
                </value>
                <value>
                    <fullName>Setup Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__TestType__c</fullName>
        <label>Test Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Extension Configuration</label>
    <listViews>
        <fullName>copado__All</fullName>
        <columns>NAME</columns>
        <columns>copado__ExtensionTool__c</columns>
        <columns>copado__ExtensionApplication__c</columns>
        <columns>copado__Active__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Extension Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>copado__PreventUpdatingExtensionTool</fullName>
        <active>true</active>
        <description>This rule prevents users from modifying the Tool Configuration after the Extension Configuration is activated.</description>
        <errorConditionFormula>AND( copado__Active__c , ISCHANGED( copado__ExtensionTool__c ) )</errorConditionFormula>
        <errorMessage>This Extension Tool cannot be modified. Please create a new Extension Configuration record instead.</errorMessage>
    </validationRules>
</CustomObject>